pkgs/ndarray/hook/custom_ufuncs.h

/* ============================================================================
 * SECTION 1: CORE COMPLEX TYPE DEFINITIONS
 * ============================================================================
 * Binary-compatible complex number structures matching kiss_fft_cpx
 * and mapped directly to ndarray's custom Complex structures.
 */

typedef struct {
    double r; /** Real component */
    double i; /** Imaginary component */
} cpx_t;
typedef struct {
    float r;  /** Real component */
    float i;  /** Imaginary component */
} cpx_f_t;
void v_bitwise_or_uint8(const uint8_t *a, const uint8_t *b, uint8_t *res, int size);
void v_bitwise_or_int16(const int16_t *a, const int16_t *b, int16_t *res, int size);
void v_bitwise_xor_int32(const int32_t *a, const int32_t *b, int32_t *res, int size);
void v_bitwise_xor_int64(const int64_t *a, const int64_t *b, int64_t *res, int size);
void v_bitwise_xor_uint8(const uint8_t *a, const uint8_t *b, uint8_t *res, int size);
void v_bitwise_xor_int16(const int16_t *a, const int16_t *b, int16_t *res, int size);
void v_left_shift_int32(const int32_t *a, const int32_t *b, int32_t *res, int size);
void v_left_shift_int64(const int64_t *a, const int64_t *b, int64_t *res, int size);
void v_left_shift_uint8(const uint8_t *a, const uint8_t *b, uint8_t *res, int size);
void v_left_shift_int16(const int16_t *a, const int16_t *b, int16_t *res, int size);
void v_right_shift_int32(const int32_t *a, const int32_t *b, int32_t *res, int size);
void v_right_shift_int64(const int64_t *a, const int64_t *b, int64_t *res, int size);
void v_right_shift_uint8(const uint8_t *a, const uint8_t *b, uint8_t *res, int size);
void v_right_shift_int16(const int16_t *a, const int16_t *b, int16_t *res, int size);
void v_invert_int32(const int32_t *src, int32_t *res, int size);
void v_invert_int64(const int64_t *src, int64_t *res, int size);
void v_invert_uint8(const uint8_t *src, uint8_t *res, int size);
void v_invert_int16(const int16_t *src, int16_t *res, int size);
/* ============================================================================
 * SECTION 3: STRIDED MULTI-DIMENSIONAL ODOMETER WALKS (ufuncs)
 * ============================================================================
 * High-speed ND strided broadcasting and view loops executing on unmanaged C.
 * Resolves sliced views, transposes, and dimension broadcasting recursively.
 */

void s_add_double(const double *a, const int *stridesA,
                  const double *b, const int *stridesB,
                  double *res, const int *stridesRes,
                  const int *shape, int rank);
void s_sub_double(const double *a, const int *stridesA,
                  const double *b, const int *stridesB,
                  double *res, const int *stridesRes,
                  const int *shape, int rank);
void s_mul_double(const double *a, const int *stridesA,
                  const double *b, const int *stridesB,
                  double *res, const int *stridesRes,
                  const int *shape, int rank);
void s_div_double(const double *a, const int *stridesA,
                  const double *b, const int *stridesB,
                  double *res, const int *stridesRes,
                  const int *shape, int rank);
void s_add_complex(const cpx_t *a, const int *stridesA,
                  const cpx_t *b, const int *stridesB,
                  cpx_t *res, const int *stridesRes,
                  const int *shape, int rank);
void s_sub_complex(const cpx_t *a, const int *stridesA,
                  const cpx_t *b, const int *stridesB,
                  cpx_t *res, const int *stridesRes,
                  const int *shape, int rank);
void s_mul_complex(const cpx_t *a, const int *stridesA,
                  const cpx_t *b, const int *stridesB,
                  cpx_t *res, const int *stridesRes,
                  const int *shape, int rank);
void s_div_complex(const cpx_t *a, const int *stridesA,
                  const cpx_t *b, const int *stridesB,
                  cpx_t *res, const int *stridesRes,
                  const int *shape, int rank);
void s_where_double(const unsigned char *cond, const int *stridesCond,
                    const double *x, const int *stridesX,
                    const double *y, const int *stridesY,
                    double *res, const int *stridesRes,
                    const int *shape, int rank);
void s_where_float(const unsigned char *cond, const int *stridesCond,
                   const float *x, const int *stridesX,
                   const float *y, const int *stridesY,
                   float *res, const int *stridesRes,
                   const int *shape, int rank);
void s_sin_complex128(const cpx_t *src, const int *stridesSrc, cpx_t *res, const int *stridesRes, const int *shape, int rank);
void s_sin_complex64(const cpx_f_t *src, const int *stridesSrc, cpx_f_t *res, const int *stridesRes, const int *shape, int rank);
void s_cos_complex128(const cpx_t *src, const int *stridesSrc, cpx_t *res, const int *stridesRes, const int *shape, int rank);
void s_cos_complex64(const cpx_f_t *src, const int *stridesSrc, cpx_f_t *res, const int *stridesRes, const int *shape, int rank);