pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
  )
>()
external void v_bitwise_or_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Int,
  )
>()
external void v_bitwise_or_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_bitwise_xor_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_bitwise_xor_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
  )
>()
external void v_bitwise_xor_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Int,
  )
>()
external void v_bitwise_xor_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_left_shift_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_left_shift_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
  )
>()
external void v_left_shift_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Int,
  )
>()
external void v_left_shift_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int32>,
    ffi.Int,
  )
>()
external void v_right_shift_int32(
  ffi.Pointer<ffi.Int32> a,
  ffi.Pointer<ffi.Int32> b,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int64>,
    ffi.Int,
  )
>()
external void v_right_shift_int64(
  ffi.Pointer<ffi.Int64> a,
  ffi.Pointer<ffi.Int64> b,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
  )
>()
external void v_right_shift_uint8(
  ffi.Pointer<ffi.Uint8> a,
  ffi.Pointer<ffi.Uint8> b,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Pointer<ffi.Int16>,
    ffi.Int,
  )
>()
external void v_right_shift_int16(
  ffi.Pointer<ffi.Int16> a,
  ffi.Pointer<ffi.Int16> b,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>, ffi.Int)
>()
external void v_invert_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int32> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>, ffi.Int)
>()
external void v_invert_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int64> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, ffi.Int)
>()
external void v_invert_uint8(
  ffi.Pointer<ffi.Uint8> src,
  ffi.Pointer<ffi.Uint8> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Int16>, ffi.Pointer<ffi.Int16>, ffi.Int)
>()
external void v_invert_int16(
  ffi.Pointer<ffi.Int16> src,
  ffi.Pointer<ffi.Int16> res,
  int size,
);

/// ============================================================================
/// SECTION 3: STRIDED MULTI-DIMENSIONAL ODOMETER WALKS (ufuncs)
/// ============================================================================
/// High-speed ND strided broadcasting and view loops executing on unmanaged C.
/// Resolves sliced views, transposes, and dimension broadcasting recursively.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_add_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sub_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_mul_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_div_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_add_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sub_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_mul_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_div_complex(
  ffi.Pointer<cpx_t> a,
  ffi.Pointer<ffi.Int> stridesA,
  ffi.Pointer<cpx_t> b,
  ffi.Pointer<ffi.Int> stridesB,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_where_double(
  ffi.Pointer<ffi.UnsignedChar> cond,
  ffi.Pointer<ffi.Int> stridesCond,
  ffi.Pointer<ffi.Double> x,
  ffi.Pointer<ffi.Int> stridesX,
  ffi.Pointer<ffi.Double> y,
  ffi.Pointer<ffi.Int> stridesY,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_where_float(
  ffi.Pointer<ffi.UnsignedChar> cond,
  ffi.Pointer<ffi.Int> stridesCond,
  ffi.Pointer<ffi.Float> x,
  ffi.Pointer<ffi.Int> stridesX,
  ffi.Pointer<ffi.Float> y,
  ffi.Pointer<ffi.Int> stridesY,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sin_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_sin_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_cos_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_cos_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);
